Small code style issue